data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1309.wast
;; 10. **Test Description 10**:     Implement a test where a function exported from one module contains `br` instructions that target both blocks and loops. This function should be called within a nested block structure of another module. Verify that the operand stack and control flow are preserved after the `br` operation completes across the module boundary.

(assert_invalid
  (module
    (func $test_function
      (block 
        (loop (br 1))
      )
      (call $imported_func_from_other_module)
    )
    (export "test_function" (func $test_function))
  )
  "type mismatch"
)